# QuailSyncV2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TEST_COVERAGE_ANALYSIS.md  docker-compose.yml  prometheus.yml  requirements-pi.txt
.github/workflows/: ci.yml  deploy-aks.yml.disabled  todo-issues.yml
CAD/: camera_stand.stl  camera_stand_v2.stl  camera_stand_v3.stl  camera_stand_v4.scad  camera_stand_v4.stl  canakit_lid.stl  esp32_sensor_base.stl  esp32_sensor_lid.stl  hq_backplate.stl  hq_camera_stand.stl  quailsync_backplate.stl  quailsync_stand.stl
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/quailsync/app/: CameraModeControlTest.kt  DashboardE2ETest.kt  TestHelper.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_bird.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml  nfc_tech_filter.xml
certs/: quailsync.crt  quailsync.key
crates/quailsync-agent/: Cargo.toml
crates/quailsync-agent/src/: main.rs
crates/quailsync-cli/: Cargo.toml
crates/quailsync-cli/src/: main.rs
crates/quailsync-common/: Cargo.toml
crates/quailsync-common/src/: lib.rs
crates/quailsync-server/: Cargo.toml
crates/quailsync-server/src/: alerts.rs  genetics.rs  lib.rs  main.rs  state.rs  ws.rs
crates/quailsync-server/src/db/: helpers.rs  mod.rs
crates/quailsync-server/src/routes/: alerts.rs  backup.rs  birds.rs  breeding.rs  brooders.rs  camera_assignment.rs  cameras.rs  chick_groups.rs  clutches.rs  dev.rs  govee.rs  incubation.rs  indoor_cameras.rs  indoorcam.rs  mod.rs  photos.rs  processing.rs  reconcile.rs  settings.rs  system_settings.rs  telemetry.rs  trail_cameras.rs  trailcam.rs
crates/quailsync-server/tests/: api_tests.rs  boundary_tests.rs  camera_assignment_tests.rs  clutch_migration_tests.rs  incubation_tests.rs  indoor_camera_tests.rs  photo_upload_tests.rs  trailcam_tests.rs
dashboard/: index.html
deploy/: backup-bird-photos.sh  incubator-pipeline.service  indoor-pipeline.service  prune-archived-photos.sh  quailsync-camera.service  quailsync-photo-backup.service  quailsync-photo-backup.timer
deploy/k8s/: caddy-config.yaml  deployment.yaml  service.yaml  storage.yaml
docs/: NFC_ALGORITHM.md  dropped_tag_deduction.md
esp32-sensor/: README.md  esp32-sensor.ino
govee-poller/: config.yaml  govee-poller.service  govee_poller.py
incubator/: .incubator-secrets.example  README.md  __init__.py  camera.py  config.json  config.py  define_rois.py  detector.py  diff.py  main.py  pytest.ini  requirements.txt  roboflow_uploader.py  roi.py  storage.py
incubator/tests/: conftest.py  test_config.py  test_detector.py  test_diff.py  test_main.py  test_roboflow.py  test_roi.py  test_storage.py
indoor-cam/: .indoor-cam-secrets.example  active_learning.py  bridge.py  capture.py  config.py  detector.py  indoor-cam-pipeline.service  pipeline.py  pytest.ini  requirements.txt  settings_client.py  storage.py
indoor-cam/tests/: conftest.py  test_active_learning.py  test_bridge.py  test_capture.py  test_config.py  test_pipeline.py  test_settings_client.py  test_storage.py
indoor-pipeline/: .indoor-pipeline-secrets.example  README.md  __init__.py  assignment.py  camera.py  config.json  config.py  detector.py  main.py  observations.py  pytest.ini  requirements.txt  roboflow_uploader.py  snapshots.py  storage.py  verify_voc_upload.py
indoor-pipeline/tests/: conftest.py  test_assignment.py  test_detector.py  test_main.py  test_observations.py  test_roboflow.py  test_snapshots.py
pi-agent/: Dockerfile.camera  Dockerfile.sensors  camera_stream.py  pi_agent.py
pi-agent/tests/: test_pi_agent.py
scripts/: install-cron.sh  morning-backup-verify.sh  nightly-backup.sh  seed_test_data.py  weekly-cleanup.sh
tests/: conftest.py  test_dashboard_e2e.py
tools/: .processed_log.txt  install_scheduler.ps1  roboflow_prep.py  sync_snapshots.ps1
trailcam/: .trailcam-secrets.example  backfill_jsonl.py  backfill_to_db.py  config.py  pipeline.py  pytest.ini  quailsync_bridge.py  requirements.txt  roboflow_uploader.py  spypoint_poller.py  test_pipeline.py  timelapse.py  trailcam-pipeline.service  yolo_detector.py
trailcam/tests/: conftest.py  test_advanced_security.py  test_bridge.py  test_config.py  test_detector.py  test_integration.py  test_photo_state.py  test_poller.py  test_security.py
(+24 files in other folders)
