[workspace]
members = [
    "crates/quailsync-common",
    "crates/quailsync-agent",
    "crates/quailsync-server",
    "crates/quailsync-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
quailsync-common = { path = "crates/quailsync-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
