[workspace]
members = [
    "crates/quailsync-common",
    "crates/quailsync-agent",
    "crates/quailsync-server",
    "crates/quailsync-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
quailsync-common = { path = "crates/quailsync-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
rand = "0.9"
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
colored = "3"
anyhow = "1"
