[package]
name = "quailsync-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quailsync-cli"
path = "src/main.rs"

[dependencies]
quailsync-common.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
colored.workspace = true
chrono.workspace = true
anyhow.workspace = true
qrcode.workspace = true
