[package]
name = "quailsync-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quailsync-server"
path = "src/main.rs"

[dependencies]
quailsync-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
chrono.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde_json.workspace = true
urlencoding = "2"
