[package]
name = "quailsync-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quailsync-server"
path = "src/main.rs"

[dependencies]
quailsync-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = { workspace = true, features = ["multipart"] }
chrono.workspace = true
rusqlite.workspace = true
# Runtime HTTP client — used to push ntfy alerts (e.g. oversized photo
# uploads). Matches the backup script's ntfy mechanism. json feature is
# inherited from the workspace default; no extra features needed here.
reqwest.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

[dev-dependencies]
# multipart: lets the photo-upload tests build multipart/form-data requests.
reqwest = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde_json.workspace = true
urlencoding = "2"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
